terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "devsecops_sg" {
  name        = "devsecops-sg"
  description = "Allow SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
